@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-11.10.1</title></head>
+<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-11.10.2</title></head>
 <body>
 <h1 align="center"><a name="top">Release Summary</a></h1>
-<h3 align="center">asterisk-11.10.1</h3>
-<h3 align="center">Date: 2014-06-12</h3>
+<h3 align="center">asterisk-11.10.2</h3>
+<h3 align="center">Date: 2014-06-13</h3>
 <h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
 <hr/>
 <h2 align="center">Table of Contents</h2>
@@ -30,7 +30,7 @@
 </tr>
 <tr valign="top">
 <td>
-3 bebuild<br/>
+5 bebuild<br/>
 </td>
 <td>
 </td>
@@ -42,30 +42,26 @@
 <a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a>
 <center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all changes that went into this release that did not directly close an issue from the issue tracker.  The commits may have been marked as being related to an issue.  If that is the case, the issue numbers are listed here, as well.</p>
 <table width="100%" border="1">
-<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.1?view=revision&revision=415787">415787</a></td><td>bebuild</td><td>Create 11.10.1</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.1?view=revision&revision=415792">415792</a></td><td>bebuild</td><td>Update .version, remove summaries</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.1?view=revision&revision=415905">415905</a></td><td>bebuild</td><td>Merge changes for AST-2014-006, AST-2014-007</td>
+<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.2?view=revision&revision=416057">416057</a></td><td>bebuild</td><td>Create 11.10.2</td>
+<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.2?view=revision&revision=416062">416062</a></td><td>bebuild</td><td>Update .version, remove summaries</td>
+<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.2?view=revision&revision=416069">416069</a></td><td>bebuild</td><td>Merge fix for regression caused by fix for AST-2014-007</td>
+<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.2?view=revision&revision=416092">416092</a></td><td>bebuild</td><td>Importing release summary for 11.10.2 release.</td>
+<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/tags/11.10.2?view=revision&revision=416139">416139</a></td><td>bebuild</td><td>Update ChangeLog</td>
 <td></td></tr></table>
 <hr/>
 <a name="diffstat"><h2 align="center">Diffstat Results</h2></a>
 <center><a href="#top">[Back to Top]</a></center><br/><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p>
 <pre>
 .version                      |    2
-ChangeLog                     |   58 ++++
-UPGRADE.txt                   |   13 +
-apps/app_mixmonitor.c         |    6
-asterisk-11.10.0-summary.html |  400 -------------------------------
-asterisk-11.10.0-summary.txt  |  500 ---------------------------------------
-channels/chan_sip.c           |    4
-configs/http.conf.sample      |    6
-include/asterisk/tcptls.h     |   47 +++
-include/asterisk/utils.h      |    1
-main/http.c                   |   34 ++
-main/manager.c                |   73 ++---
-main/tcptls.c                 |  536 +++++++++++++++++++++++++++++++++++-------
-main/utils.c                  |   19 +
-res/res_http_websocket.c      |    7
-15 files changed, 673 insertions(+), 1033 deletions(-)
+ChangeLog                     |   11 ++++
+asterisk-11.10.1-summary.html |   72 -----------------------------
+asterisk-11.10.1-summary.txt  |  103 ------------------------------------------
+channels/chan_sip.c           |    6 ++
+include/asterisk/tcptls.h     |   16 ++++++
+main/http.c                   |    3 +
+main/manager.c                |    6 ++
+main/tcptls.c                 |   17 ++++++
+9 files changed, 58 insertions(+), 178 deletions(-)
 </pre><br/>
 <hr/>
 </body>
